--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,7 +6,7 @@
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast: #000;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
@@ -233,4 +233,5 @@
 
     --ion-card-background: #1e1e1e;
   }
+
 }
