second commit: formControl added to avoid empty card games Ionic 6 capacitor storage API (homepage)

--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -13,7 +13,7 @@
         <img src="/assets/img/okabe.jpg"/>
       </ion-col>
       <ion-col size="9">
-        <p>Je suis Eric Hoffmann, 54 ans, j'ai débuté cette collection il y a maintenant 30 années, certains sont donc inconnus des plus jeunes!
+        <p>Je suis Eric Hoffmann, 54 ans, j'ai débuté cette collection il y a maintenant 30 années, certains titres sont donc inconnus des plus jeunes!
       </p>
       </ion-col>
     </ion-row>
@@ -24,7 +24,7 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>J'ai débuté cette aventure en 1991 avec l'arrivée des consoles de salon 16 bits, Séga Mégadrive, Superfamicom(SuperNintendo chez nous) et Néo Géo, la reine des console de cette époque qui offrait la qualité des bornes d'arcades à la maison!
+      <ion-col>J'ai débuté cette aventure en 1991 avec l'arrivée des consoles de salon 16 bits, Sega Megadrive, Superfamicom(SuperNintendo chez nous) et Néo Géo, la reine des console de cette époque qui offrait la qualité des bornes d'arcades à la maison!
         Le prix était aussi à la hauteur.<br>
         <br>
         Les jeux vidéos étaient très chers à cette époque, encore peu distribués en France et les boutiques d'imports se faisaient des marges énormes! Il n' y avait pas besoin de faire de grandes études pour rouler en grosses cylindrées, il suffisait juste d'avoir de bons contacts au pays du soleil levant.<br>
