--- a/src/global.scss
+++ b/src/global.scss
@@ -36,4 +36,19 @@ ion-title{
 
 ion-toggle{
   --background-checked: limegreen;
+  --handle-background-checked: limegreen;
+}
+/** For form invalid field for Ionic Angular*/
+.ion-invalid.ion-touched ion-label {
+  color: var(--ion-color-danger);
+}
+
+/** For form invalid field for Angular*/
+input.ng-invalid.ng-touched{
+  border: 1px solid red;
+}
+
+
+.ion-valid.ion-touched ion-label {
+  color: var(--ion-color-success);
 }
