--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,35 +10,33 @@
   <ion-list>
     <h2> Ionic 6 Capacitor Storage API</h2>
     <hr />
-    <ion-item>
-      <ion-label position="floating">Enter Title</ion-label>
-      <ion-input type="text" [(ngModel)]="title" placeholder="Enter game title " required></ion-input>
+    <h3 *ngIf="images.length === 0" class="ion-padding ion-text-center">Please Select Image!</h3>
+    <ion-item *ngFor="let file of images; let i = index">
+      <ion-thumbnail slot="start">
+        <ion-img [src]="file.data"></ion-img>
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        {{ file.name }}
+      </ion-label>
+      <ion-button slot="end" size="small" color="danger" (click)="deleteImage(file)">
+        delete storage item
+      </ion-button>
     </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Game system</ion-label>
-      <ion-input type="text" [(ngModel)]="gameSystem" placeholder="Enter game system" required></ion-input>
+    <ion-card *ngFor="let file of images; let i = index">
+    <ion-item style="color:lightblue">
+      LocalStorage JSON : &nbsp;
+      {{ file.name}}
+      <img class="test" [src] = "file.data">
     </ion-item>
-
-    <ion-item>
-      <ion-label position="floating">Artwork link</ion-label>
-      <ion-input type="text" [(ngModel)]="artwork" placeholder="Enter artwork link" required></ion-input>
-    </ion-item>
-
-    <ion-item>
-      Get LocalStorage string title : {{ storageName }}
-    </ion-item>
-    <ion-item>
-      Get LocalStorage JSON game :
-      {{ game?.title}}: {{ game?.gameSystem }}
-      <img class="test" [src] = "game?.artwork" alt="{{game?.title}}">
-    </ion-item>
+    </ion-card>
   </ion-list>
-
-  <div class="ion-padding">
-    <ion-button class="ion-text-left" size="small" (click)="setStorage()">Set storage data</ion-button>
-    <ion-button size="small" color="tertiary" (click)="getStorage()">Get storage data</ion-button>
-    <ion-button size="small" color="danger" (click)="clearStorage()">Clear storage</ion-button>
-  </div>
-
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar color="primary">
+    <ion-button fill="clear" expand="full" color="light" (click)="selectImage()">
+      <ion-icon slot="start" name="camera"></ion-icon>
+      Select Image
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
