Update ionic capacitor on homepage:
css update

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
     <ion-item style="color:lightblue">
       LocalStorage JSON : &nbsp;
       {{ file.name}}
-      <img class="test" [src] = "file.data">
+      <img class="local" [src] = "file.data">
     </ion-item>
     </ion-card>
   </ion-list>
