--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>photos</ion-title>
+    <ion-title>Simple camera use</ion-title>
   </ion-toolbar>
 </ion-header>
 
