--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,34 +6,38 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding" [fullscreen]="true">
+  <ion-fab-button color="warning">
+    <ion-icon name="camera" (click)="takePhoto()"></ion-icon>
+  </ion-fab-button>
   <img class="Okabe" src="/assets/img/okabe.jpg"/>
   <ion-list>
-    <h2> Ionic 6 Capacitor Storage API</h2>
+    <h2> Ionic 6 Image Capacitor</h2>
     <hr />
     <h3 *ngIf="images.length === 0" class="ion-padding ion-text-center">Please Select Image!</h3>
-    <ion-item *ngFor="let file of images; let i = index">
-      <ion-thumbnail slot="start">
-        <ion-img [src]="file.data"></ion-img>
-      </ion-thumbnail>
-      <ion-label class="ion-text-wrap">
-        {{ file.name }}
-      </ion-label>
-      <ion-button slot="end" size="small" color="danger" (click)="deleteImage(file)">
-        delete storage item
-      </ion-button>
-    </ion-item>
-    <ion-card *ngFor="let file of images; let i = index">
-    <ion-item style="color:lightblue;font-size: 1em">
-      {{ file.name}}
-      <img class="local" [src] = "file.data">
-    </ion-item>
-    </ion-card>
-  </ion-list>
+      <ion-item *ngFor="let file of images; let i = index">
+        <ion-thumbnail slot="start">
+          <ion-img [src]="file.data"></ion-img>
+        </ion-thumbnail>
+        <ion-label class="ion-text-wrap">
+          {{ file.name }}
+        </ion-label>
+        <ion-button slot="end" fill="clear" (click)="deleteImage(file)">
+          <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+        </ion-button>
+      </ion-item>
+    </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let photo of photos;index as position">
+        <ion-img [src]="photo.webviewPath"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="primary">
-    <ion-button fill="clear" expand="full" color="light" (click)="selectImage()">
+  <ion-toolbar color="light">
+    <ion-button fill="clear" expand="full" color="dark" (click)="selectImage()">
       <ion-icon slot="start" name="camera"></ion-icon>
       Select Image
     </ion-button>
