--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -89,3 +89,11 @@ ion-item{
   width:80%;
   height:auto;
 }
+.send{
+  --background:linear-gradient(to bottom,#428cff,#62ceff);
+  text-align: center;
+  color: #fff;
+}
+.ion-text-center{
+  margin: 0 auto;
+}
