--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -1,18 +1,44 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Simple camera use</ion-title>
+    <ion-title>Gallery from Storage</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="6" *ngFor="let photo of photos;index as position">
-        <ion-img [src]="photo.webviewPath"></ion-img>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <ion-fab-button (click)="takePhoto()">
-    <ion-icon name="camera"></ion-icon>
-  </ion-fab-button>
+<ion-content class="padding">
+  <ion-list>
+    <ion-grid *ngFor="let file of images; let i = index">
+      <ion-row>
+        <ion-col sizeXs="12" sizeSm="6" size="4" sizeMd="4" sizeLg="3" sizeXl="2">
+          <ion-img [src] ="file.data" alt="{{file.name}}"></ion-img>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-item>
+      <ion-label position="floating">Enter Title</ion-label>
+      <ion-input type="text" [(ngModel)]="title" placeholder="Enter title" required></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Choose image</ion-label>
+      <ion-input type="text" [(ngModel)]="image" placeholder="Choose jpg" required></ion-input>
+    </ion-item>
+
+    <hr />
+    <div class="ion-text-center">
+      <ion-button size="small" class="setSto" (click)="setStorage()">Set storage data</ion-button>
+      <ion-button size="small" color="tertiary" (click)="getStorage()">Get storage data</ion-button>
+      <ion-button size="small" color="danger" (click)="clearStorage()">Clear storage</ion-button>
+    </div>
+  </ion-list>
+ <ion-item-divider></ion-item-divider>
+  <ion-item class="localSto">
+    Get LocalStorage string name : {{ storageName }}
+  </ion-item>
+  <ion-item class="localSto">
+    Get LocalStorage JSON person :  {{ game?.title }} : <ion-img [src]=" game?.image"></ion-img>
+  </ion-item>
 </ion-content>
+<footer class="ion-text-center">
+  <ion-toolbar color="light">
+  <ion-button  expand="full" class="send" (click)="getImages()">Get Gallery</ion-button>
+  </ion-toolbar>
+</footer>
