--- a/src/app/photos/photos.page.html
+++ b/src/app/photos/photos.page.html
@@ -34,7 +34,7 @@
     Get LocalStorage string name : {{ storageName }}
   </ion-item>
   <ion-item class="localSto">
-    Get LocalStorage JSON person :  {{ game?.title }} : <ion-img [src]=" game?.image"></ion-img>
+    Get LocalStorage JSON game :  {{ game?.title }} : <ion-img [src]=" game?.image"></ion-img>
   </ion-item>
 </ion-content>
 <footer class="ion-text-center">
