--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,7 +27,7 @@
 
 <ion-footer class="ion-text-center">
   <ion-toolbar color="dark">
-    <ion-button expand="full" class="send" (click) = "sendImages()">Send to Gallery</ion-button>
+    <ion-button class="send" (click) = "sendImages()">Send to Gallery</ion-button>
     <ion-button fill="clear" expand="full" color="light" (click)="selectImage()">
       <ion-icon slot="start" name="camera"></ion-icon>
       Select Image
